src/personal_path/own_path.css
body {
    background-color: rgb(17, 15, 44);
    font-family: "Roboto Light", sans-serif;
    color: rgb(21, 96, 128);
    display: flex;
    justify-content: center;
}

main {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    height: 95vh;
    width: 80%;
}

.semester-root {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
}

.semester-root.free-zone-root {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: fixed;
    width: 45%;
    height: 99%;
    top: 0;
    border-top: 0;
    border-radius: 0;
    border-color: rgb(26, 179, 213);
}

.semester-root.free-zone-root .courses-container {
    margin-bottom: 10px;
}

#course-number-container {
    display: flex;
    width: 10%;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    text-align: center;
    font-size: 120%;
}

@media (max-width: 1145px) {
    #course-number-container * {
        writing-mode: tb;
        text-orientation: upright;
        width: 20px;
    }
}

.course-preview-root {
    position: relative;
    width: 80%;
    height: 30px;
    background-color: rgb(26, 179, 213);
    border-radius: 10px;
    color: rgb(245, 245, 245);
}

.course-preview-root .title-container {
    border-radius: inherit;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
    width: 100%;
    background-color: inherit;
}

.course-preview-root .title {
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    font-size: 15px;
    text-align: center;
    padding: 10px;
}

.course-preview-root .zed-counter {
    position: absolute;
    bottom: -10px;
    right: -10px;
    background-color: rgb(254, 37, 167);
    width: 24px;
    height: 24px;
    border-radius: 15px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.semester-root {
    margin-bottom: 25px;
    padding: 10px;
}

.desc-window-root {
    position: fixed;
    width: 100%;
    z-index: 1;
}

.desc-window-root .container {
    height: 99vh;
    display: flex;
    justify-content: center;
}

.desc-window-root .container .window {
    position: absolute;
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-direction: column;
    background-color: rgb(17, 15, 44);
    margin-top: 75px;
    margin-left: 50px;
    padding: 10px;
    width: 50%;
    height: 60%;
    border-radius: 10px;
    border: solid rgb(26, 179, 213) 4px;
    flex-shrink: 0;
}

.desc-window-root .container .window .desc {
    overflow-y: auto;
    overflow-x: hidden;
    height: 100%;
    width: 100%;
    align-self: start;
    margin-bottom: 15px;
    color: rgb(183, 183, 183);
}

.close-btn {
    text-align: center;
    cursor: pointer;
    border-radius: 20px;
    width: 15%;
    padding-left: 5px;
    padding-right: 5px;
    overflow: hidden;
    text-overflow: ellipsis;
    padding-bottom: 5px;
    font-size: 17px;
    border: solid rgb(26, 179, 213) 2px;
    color: rgb(26, 179, 213);
    opacity: 0.2;
    margin-bottom: 10px;
}

.close-btn:hover {
    transition: 0.5s;
    opacity: 0.6;
}

.filter-btn {
    background-color: rgb(254, 37, 167);
    color: rgb(245, 245, 245);
    border-radius: 50px;
    margin: 5px;
    display: inline-block;
    padding: 10px;
    cursor: pointer;
    opacity: 0.5;
}

.filter-btn:hover {
    transition: 0.5s;
    opacity: 1;
}

.semester-root {
    height: 40%;
    background-color: inherit;
    border: solid rgb(21, 96, 128) 3px;
    border-radius: 10px;
}

.semester-root .courses-container {
    display: flex;
    padding-top: 20px;
    padding-bottom: 10px;
    flex-direction: column;
    align-items: center;
    gap: 15px;
    overflow-y: auto;
    overflow-x: hidden;
    /*border: solid rgb(21, 96, 128) 3px;*/
    cursor: pointer;
    height: 70%;
    width: 100%;
}

.courses-container::-webkit-scrollbar-thumb {
    background-color: rgba(21, 96, 128, 0.5);
    border: 3px solid rgb(26, 25, 47);
    border-radius: 10px;
}

.courses-container::-webkit-scrollbar {
    background-color: rgba(21, 96, 128, 0.5);
    border-radius: 10px;
}

.semester-root > .zed-counter {
    position: absolute;
    right: -15px;
    bottom: -10px;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 5px 10px;
    font-size: 16px;
    background-color: rgb(254, 37, 167);
    border-radius: 30px;
}

.semester-root > .zed-counter > .zed-counter-text {
    color: rgb(245, 245, 245);
}

.semester-root {
    flex-shrink: 0;
    position: relative;
}

.sem-container {
    display: flex;
    flex-direction: column;
    width: 33%;
}

.sem-container > .title {
    text-align: center;
    padding: 10px;
    font-size: 120%;
}

